# cedar-policy-compiler

./: Cargo.toml  README.md
examples/: basic_usage.rs  simple_policy.cedar
src/: compiler.rs  lib.rs
src/ast/: lowering.rs  mod.rs
src/optimization/: mod.rs  passes.rs
src/wasm/: codegen.rs  mod.rs  runtime.rs  types.rs
